# shortfilm

./: .gitignore
frontend/: jsconfig.json  next.config.js  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/server/pages/: _app.js  index.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/webpack/: 5710d008833c5e0e.webpack.hot-update.json  b19954a9003df6ea.webpack.hot-update.json  webpack.0e88eac29300a818.hot-update.js  webpack.570390621b1b374a.hot-update.js  webpack.5710d008833c5e0e.hot-update.js  (+6 more)
frontend/components/: player.js
frontend/pages/: index.js
frontend/pages/player/: [id].js
frontend/scripts/: player.js
frontend/styles/: globals.css  videojs.module.css
jaguar_player/: index.js  package-lock.json  package.json  webpack.config.js
jaguar_player/src/: index.js
jaguar_uploader/: index.js  package-lock.json  package.json
jaguar_uploader/src/: index.js  style.css
mammoth_transcoder/: Dockerfile  index.html  index.js  package-lock.json  package.json  upload.html  utility.js
mammoth_transcoder/streaming/: command.sh  dashing.sh  t.sh  thumbnails.sh
mammoth_transcoder_rust/: Cargo.toml  garbage_collector.rs  main.rs  transcoder.rs  types.rs  video_utility.rs  web_server.rs
mammoth_transcoder_rust/transcoder/: mod.rs  transcoder.rs  utility.rs
proxy/: Dockerfile  dev.yaml  test.yaml
pubsub_connector/: .env  index.js  package-lock.json  package.json
pubsub_connector/lib/: redis.js
streaming_test/: home.html  index.js  package.json
test/: docker-compose.yml
(+16 files in other folders)
